@@ -5,5 +5,6 @@ Marin Glibic - good and helpful bugreports
 Jakub Narebski - tweaks for .spec file
 Doruk Fisek - improved .desktop file
 Adrian Schroeter - bugfix
+Andres Rand - 7z archives support
 Digikam developers - Digikam source code helped me a lot with imlib2
 
